--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-MONGO_URI=mongodb://localhost:27017
+MONGO_URI=mongodb+srv://admin:admin@cluster0.ivh4mkr.mongodb.net/?retryWrites=true&w=majority
+
+
